packages/svelte/tests/compiler-errors/samples/attribute-unique-binding/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'attribute_duplicate',
		message: 'Attributes need to be unique',
		position: [17, 25]
	}
});
